# mlstep

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci_workflow.yaml  code_quality.yaml  test_suite.yaml
example/: plot_target_data.py  train.py
examples/ukca/: plot_losses.py  plot_target_data.py  train.py
mlstep/: __init__.py  data_utils.py  net.py  propagate.py  train.py
src/mlstep/: net.py
test/: test_data_utils.py  test_net.py  test_propagate.py
