[project]
name = "mlstep"
version = "0.1"
authors = [
  {name = "Joe Wallwork", email="jw2423@cam.ac.uk" },
]
maintainers = [
  {name = "Joe Wallwork", email="jw2423@cam.ac.uk" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "machine-learning", "timstep"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python",
]

dependencies = ["netCDF4", "scikit-learn", "torch"]
[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/Cambridge-ICCS/mlstep"
Issues = "https://github.com/Cambridge-ICCS/mlstep/issues"

[tool.setuptools]
packages = ["mlstep"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules for full details of each ruleset.

# Enable:  D: `pydocstyle`, PL: `pylint`, I: `isort`, W: `pycodestyle whitespace`
#          NPY: `numpy`, FLY: `flynt`, F: `pyflakes`, RUF: `ruff`
#          From flake8: "ARG", "SLF", "S", "BLE", "B", "A", "C4", "EM", "ICN",
#                       "PIE", "Q", "RSE", "SIM", "TID"
select = ["D", "PL", "I", "E", "W", "NPY", "FLY", "F", "RUF",
          "ARG", "SLF", "S", "BLE","B", "A", "C4", "EM", "ICN", "PIE", "Q", "RSE",
          "SIM", "TID"]

# Enable D417 (Missing argument description) on top of the NumPy convention.
extend-select = ["D417"]

# Ignore SIM108 (use ternary instead of if-else) as I think it can obscure intent.
# Ignore RUF002 (ambiguous characters) as it does not allow apostrophes in strings.
# Ignore S101 (use of `assert` detected) as assertions are used in the test suite.
ignore = ["SIM108", "RUF002", "S101"]

[tool.ruff.lint.pydocstyle]
# Use NumPy convention for checking docstrings
convention = "numpy"
